--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ body {
   justify-content: space-around;
 }
 
-.pokemon-display {
+.card-data {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,15 +23,14 @@ body {
   width: 30%;
 }
 
-.pokemon-form {
-  margin-bottom: 20px;
-}
 
-.sidebar {
+
+.image-gallery {
   width: 850px;
 }
 
 .recents {
+  display: flex;
   width: 100%;
   border-bottom: 5px solid black;
   height: 200px;
@@ -40,20 +39,38 @@ body {
   z-index: 1;
 }
 
-.recents-active {
+.recents-all {
   width: 110px;
   height: 110px;
   margin: 10px;
   padding: 5px;
-  background-color: rgb(247, 170, 170);
+  background-color: white;
+  border: 5px solid rgba(0, 0, 0, 0);
   border-radius: 20px;
   position: absolute;
-  left: 0px;
   bottom: 0;
   z-index: 0;
 }
 
-.logo {
+.recents-all:hover {
+  cursor: pointer;
+  border: 5px solid black;
+}
+
+.recents-active {
+  background-color: rgb(247, 170, 170);
+}
+
+.recents-div {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-gallery-logo {
   width: 100px;
   height: 100px;
   margin: 10px;
@@ -64,7 +81,38 @@ body {
   z-index: 1;
 }
 
-.logo:hover {
+
+
+.image-gallery-all:hover{
   border: 5px solid black;
   cursor: pointer;
+}
+
+.deck-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: grey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.closeDeckBtn {
+  position: absolute;
+  left: 50px;
+  top: 50px;
+}
+
+.deck {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  width: 80%;
+  height: 80%;
+  border: 1px solid red;
+  z-index: 2;
+  background-color: white;
+  padding: 30px;
+  overflow: auto;
 }
