--- a/src/App.css
+++ b/src/App.css
@@ -77,11 +77,15 @@ main {
   background-color: var(--three);
   width: 80%;
   display: flex;
+  margin-bottom: 50px;
 }
 
 .main-sidebar {
   background-color: var(--four);
-  width: 15%;
+  width: 230px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .main-section {
@@ -164,8 +168,11 @@ main {
 }
 
 .recents-div {
+  width: 60px;
+  height: 60px;
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
 }
 
@@ -216,7 +223,7 @@ main {
 
 .gallery-section {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .gallery-section-header {
@@ -240,7 +247,6 @@ main {
   position: absolute;
   right: 10px;
   top: 10px;
-  width: 100px;
   font-size: 1.1em;
 
 }
@@ -269,8 +275,8 @@ main {
 .deck-sidebar {
   padding: 30px;
   width: 10%;
+  margin-left: 20px;
   height: 100%;
-  border: 2px solid red;
   background-color: white;
   display: flex;
   flex-direction: column;
