--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,7 @@ body {
 .header-logo {
   width: 200px;
   height: 100px;
-  border: 1px solid red;
-
+  margin-left: 10px;
 }
 
 nav {
@@ -265,7 +264,6 @@ main {
   gap: 10px;
   width: 90%;
   height: 100%;
-  border: 1px solid red;
   z-index: 2;
   background-color: white;
   padding: 30px;
