--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ nav button:hover {
 main {
   background-color: var(--three);
   width: 80%;
+  height: 100%;
   display: flex;
   margin-bottom: 50px;
 }
@@ -87,26 +88,6 @@ main {
   padding-bottom: 20px;
 }
 
-.main-section {
-  width: 85%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.main-section-display-window {
-  width: 100%;
-  height: 400px;
-  border-bottom: 5px solid var(--four);
-  display: flex;
-  align-items: center;
-}
-
-.main-section-display-pokemon {
-  height: 90%;
-  margin-left: 50px;
-  margin-right: 50px;
-}
 
 .image-gallery {
   padding-top: 20px;
@@ -157,11 +138,6 @@ main {
   z-index: 0;
 }
 
-.recents-all:hover {
-  cursor: pointer;
-  border: 5px solid black;
-}
-
 .recents-active {
   background-color: rgb(247, 170, 170);
 }
@@ -174,6 +150,10 @@ main {
   align-items: center;
   position: relative;
 }
+
+
+
+
 
 .image-gallery-all:hover{
   border: 2px solid black;
@@ -290,4 +270,40 @@ main {
 
 .deck-sidebar select {
   width: 100%;
+}
+
+
+.main-section {
+  width: 85%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main-section-display-window {
+  width: 100%;
+  height: 50%;
+  border-bottom: 5px solid var(--four);
+  display: flex;
+  align-items: center;
+}
+
+.main-section-display-pokemon {
+  height: 90%;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.main-section-recent-window {
+  height: 60%;
+  overflow: auto;
+}
+
+.recent-pokemon-card-container {
+  height: 100%;
+}
+
+.recent-pokemon-card {
+  width: 200px;
+  margin: 20px;
 }
