--- a/src/App.css
+++ b/src/App.css
@@ -299,8 +299,15 @@ main {
   overflow: auto;
 }
 
+.recent-pokemon-header {
+  margin-left: 20px;
+}
+
 .recent-pokemon-card-container {
-  height: 100%;
+  height: 75%;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  width: 100%; 
 }
 
 .recent-pokemon-card {
