--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,11 @@ body {
 #root {
   width: 100%;
   height: 100%;
+  overflow: auto;
 }
 
 .header {
-  width: 80%;
+  width: 1500px;
   background-color: var(--five);
   height: 100px;
   display: flex;
@@ -70,28 +71,31 @@ nav button {
 nav button:hover {
   cursor: pointer;
   background-color: var(--four);
+  color: var(--one);
 }
 
 main {
   background-color: var(--three);
-  width: 80%;
-  height: 100%;
+  width: 1500px;
+  min-height: 100%;
   display: flex;
   margin-bottom: 50px;
 }
 
 .main-sidebar {
   background-color: var(--four);
-  width: 230px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+  width: 20%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
 .image-gallery {
   padding-top: 20px;
-  height: 75%;
+  height: 70%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,6 +165,7 @@ main {
 }
 
 .image-gallery-logo-selection {
+  margin-top: 20px;
   overflow-y: auto;
   height:min-content;
   display: flex;
@@ -168,12 +173,16 @@ main {
 }
 
 .card-data {
-  height: 150px;
+  height: 29%;
+  width: 90%;
   margin-top: 50px;
+  padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
   border-top: 5px solid black;
+  margin-bottom: 30px;
 }
 
 .card-data-p {
@@ -220,6 +229,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 3;
 }
 
 .closeDeckBtn {
@@ -298,7 +308,7 @@ main {
 
 
 .main-section {
-  width: 85%;
+  width: 80%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -306,10 +316,24 @@ main {
 
 .main-section-display-window {
   width: 100%;
-  height: 50%;
+  min-height: 50%;
   border-bottom: 5px solid var(--four);
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 0;
+}
+
+.card-added {
+  position: absolute;
+  color: white;
+  background-color: green;
+  padding: 5px;
+  border: 2px solid black;
+  font-size: 1.5em;
+  right: 10%;
+  top: 10%;
+  pointer-events: none;
 }
 
 .main-section-display-pokemon {
@@ -318,9 +342,60 @@ main {
   margin-right: 50px;
 }
 
+.stats-container {
+  width: 60%;
+  height: 93%;
+}
+
+.stat {
+  width: 100%;
+  margin: 10px;
+  font-size: 1.1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.stat-btn {
+  margin-top: 20px;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.stat-btn-cycle {
+  width: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.stat-btn button {
+  background-color: var(--two);
+  font-size: 1.2em;
+}
+
+.stat-btn button:hover {
+  background-color: var(--four);
+  color: var(--one);
+  cursor: pointer;
+}
+
+.stat-btn-cycle button {
+  width: 45%;
+}
+
+.stat-btn > button {
+  width: 100%;
+  height: 30px;
+}
+
 .main-section-recent-window {
-  height: 60%;
+  max-height: 60%;
   overflow: auto;
+  width: 90%;
+  margin: 5%;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .recent-pokemon-header {
@@ -330,12 +405,13 @@ main {
 .recent-pokemon-card-container {
   height: 75%;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  width: 100%; 
+  grid-template-columns: repeat(5, 15%);
+  gap: 20px;
+  width: 100%;
+   
 }
 
 .recent-pokemon-card {
   width: 200px;
-  margin: 20px;
 }
 
