--- a/src/App.css
+++ b/src/App.css
@@ -199,6 +199,7 @@ main {
 .card-data button {
   border: none;
   height: 30px;
+  width: 60%;
   margin: 5px;
   background-color: var(--two);
   border: 2px solid var(--two);
@@ -232,16 +233,23 @@ main {
   z-index: 3;
 }
 
-.closeDeckBtn {
+.close-deck-btn {
   position: absolute;
-  right: 10px;
-  top: 10px;
-  font-size: 1.1em;
+  top: 20px;
+  font-size: 1.2em;
+  background-color: var(--three);
+  border: 2px solid var(--four);
+  color: var(--eight);
+}
 
+.close-deck-btn:hover {
+  cursor: pointer;
+  background-color: var(--four);
+  color: var(--two);
 }
 
 .deck-container {
-  width: 80%;
+  width: 85%;
   height: 80%;
   position: relative;
   display: flex;
@@ -288,12 +296,19 @@ main {
   padding: 30px;
   width: 10%;
   margin-left: 20px;
-  height: 100%;
+  height: fit-content;
+  padding-bottom: 50px;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 1.2em;
+}
+
+.deck-sidebar input {
+  width:95%;
+  height: 30px;
+  font-size: 1em;
 }
 
 .deck-sidebar-label {
@@ -304,6 +319,8 @@ main {
 
 .deck-sidebar select {
   width: 100%;
+  height: 30px;
+  font-size: 1em;
 }
 
 
@@ -390,7 +407,7 @@ main {
 }
 
 .main-section-recent-window {
-  max-height: 60%;
+  height: 60%;
   overflow: auto;
   width: 90%;
   margin: 5%;
@@ -415,3 +432,63 @@ main {
   width: 200px;
 }
 
+.help-background {
+  position: absolute;
+  z-index: 3;
+  background-color: var(--bgClear);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.help-container-one {
+  width: 70%;
+  height: 80%;
+  background-color: white;
+  padding: 20px;
+  position: relative;
+}
+
+.help-header {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.help-container-two {
+  width: 100%;
+  height: 90%;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.help-container-two img {
+  height: 75%;
+  margin: 50px;
+  margin-top: 0;
+}
+
+.help-information {
+  height: 70%;
+  width: 50%;
+  font-size: 1.2em;
+}
+
+.help-close-btn {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  font-size: 1.2em;
+  background-color: var(--three);
+  border: 2px solid var(--four);
+  color: var(--eight);
+}
+
+.help-close-btn:hover {
+  cursor: pointer;
+  background-color: var(--four);
+  color: var(--two);
+}
