minor bug fixes

--- a/src/App.css
+++ b/src/App.css
@@ -315,6 +315,9 @@ main {
 .deck-card {
   position: relative;
   height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .deck-card:hover .deck-card-overlay {
